[project]
name = "backsantapy"
version = "0.1.0"
description = "Secret Santa matchmaking server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115.0", "uvicorn[standard]>=0.34.0"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[project.scripts]
backsanta = "main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
